[metadata]
name = CellRefiner
version = 1.0
description = Reconstruct single-cell resolution from spatial transcriptomics
author = Eric Bourgain-Chang
author_email = ebourgai@uci.edu

[options]
packages = find:
install_requires =
    numpy
    pandas
    scanpy
    tangram
    sklearn
    scipy
    matplotlib
    squidpy
    anndata
    seaborn
